[package]
name = "tokio-my-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio={version="1",features=["rt","macros","time","net"]}
#axum = "0.5"
futures = "0.3.21"
tokio = { version = "1.0", features = ["net","rt","macros","time"] }
futures-core = "0.3"
#slab = "0.4"
libc = "0"
timerfd = "1"